--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,11 +27,7 @@ jobs:
         id: deploy
         run: |
           aws deploy create-deployment \
-
-          -application-name test-nginx \
-
-          -deployment-group-name nginx-kibana \
-
-          -deployment-config-name CodeDeployDefault.OneAtATime \
-
-          -github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+          --application-name test-nginx \
+          --deployment-group-name nginx-kibana \
+          --deployment-config-name CodeDeployDefault.OneAtATime \
+          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
